--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <p class="mt-5 fs-5 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, possimus quibusdam dolor nemo velit quo, fuga omnis, iure molestias optio tempore sint at ipsa dolorum odio exercitationem eos inventore odit.</p>
                     <p class="text-primary fs-1 fw-black">$399</p>
                     <button 
+                        onclick="alert('Agregaste al carrito!')"
                         type="button"
                         class="btn fs-4 bg-primary text-white py-2 px-5"
                     >Agregar al Carrito</button>
